# device_board_seed

./: .gitignore  BUILD.gn  Kconfig.liteos_m.boards  Kconfig.liteos_m.defconfig.boards  OAT.xml  README.en.md  README.md  README_zh.md
T507/: BUILD.gn
T507/audio/accessory/ac107/include/: ac107_accessory_impl_linux.h
T507/audio/accessory/ac107/src/: ac107_accessory_adapter.c  ac107_accessory_impl_linux.c
T507/audio/codec/t507/include/: t507_codec_impl_linux.h  t507_codec_ops.h
T507/audio/codec/t507/src/: t507_codec_adapter.c  t507_codec_impl_linux.c  t507_codec_ops.c
T507/audio/dai/include/: t507_dai_ahub_impl_linux.h  t507_dai_ahub_ops.h
T507/audio/dai/src/: t507_dai_ahub_adapter.c  t507_dai_ahub_impl_linux.c  t507_dai_ahub_ops.c
T507/audio/dsp/include/: dsp_ops.h
T507/audio/dsp/src/: dsp_adapter.c  dsp_ops.c
T507/audio/soc/include/: t507_dma_ops.h
T507/audio/soc/src/: t507_dma_adapter.c  t507_dma_ops.c
T507/camera/: BUILD.gn  product.gni
T507/camera/camera_demo/: project_camera_demo.h
T507/camera/include/device_manager/: imx335.h  imx600.h  project_hardware.h
T507/camera/include/driver_adapter/: isys_object.h  ivenc_object.h  ivi_object.h  ivo_object.h  ivpss_object.h  mpi_adapter.h
T507/camera/src/device_manager/: BUILD.gn  imx335.cpp  imx600.cpp
T507/camera/src/driver_adapter/: BUILD.gn
T507/camera/src/pipeline_core/: BUILD.gn
T507/camera/src/pipeline_core/ipp_algo_example/: ipp_algo_example.c
T507/config/configs/bearpi/: sys_config.fex
T507/config/configs/default/: boot_package.cfg  env.cfg  image.cfg  sys_partition.fex
T507/config/configs/demo2.0_bearpi/: board.dts
T507/config/configs/demo2.0_harmony/: board.dts  sys_config.fex
T507/distributedhardware/: BUILD.gn
T507/system_hap/: BUILD.gn
T507/wifi/xr829_hdfadapter/: Makefile  hdf_driver_register.c  hdf_mac80211.c  hdfinit_xr829.c  net_adpater.c  net_adpater.h  wifi_config.mk
XR806/: BUILD.gn  Kconfig.liteos_m.defconfig.boards  OAT.xml
XR806/docs/硬件资料/: XR806开发板引脚功能表.xls  XR806鸿蒙开发板Bom list.xls
XR806/xradio/: Kconfig.liteos_m.board
XR806/xradio/liteos_m/: config.gni
drivers/: BUILD.gn  device_info.hcs  drivers.hcs
xradio/: BUILD.gn  Kconfig.liteos_m.board  Kconfig.liteos_m.defconfig.board
xradio/doc/: 1--系统下载与编译.md  2--固件烧录.md  3--功能展示.md  README.md  XR806-harmony-命令例.xlsx
xradio/liteos_m/: BUILD.gn  Kconfig  config.gni
