# Copyright (C) 2021 XRADIO TECHNOLOGY CO., LTD. All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
#     http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Kernel type, e.g. "linux", "liteos_a", "liteos_m".
kernel_type = "liteos_m"

# Kernel version.
kernel_version = ""

# Board CPU type, e.g. "cortex-a7", "riscv32".
board_cpu = "cortex-m33"

# Board arch, e.g.  "armv7-a", "rv32imac".
board_arch = ""

# Toolchain name used for system compiling.
# E.g. gcc-arm-none-eabi, arm-linux-harmonyeabi-gcc, ohos-clang,  riscv32-unknown-elf.
# Note: The default toolchain is "ohos-clang". It's not mandatory if you use the default toochain.
board_toolchain = "arm-none-eabi-gcc"

# The toolchain path instatlled, it's not mandatory if you have added toolchian path to your ~/.bashrc.
board_toolchain_path = ""

# Compiler prefix.
board_toolchain_prefix = "/home/PDC-XRseries/tools/gcc-arm-none-eabi-10-2020-q4-major/bin/arm-none-eabi-"

# Compiler type, "gcc" or "clang".
board_toolchain_type = "gcc"

# Board related common compile flags.
board_cflags = [
    "-mcpu=cortex-m33",
    "-mtune=cortex-m33",
    "-march=armv8-m.main+dsp",
    "-mfpu=fpv5-sp-d16",
    "-mfloat-abi=softfp",
    "-mcmse",
    "-mthumb",
    "-fno-common",
    "-fno-exceptions",
    "-ffunction-sections",
    "-fdata-sections",
    "-fomit-frame-pointer",
    "-includexr_config.h",
    "-includecommon/prj_conf_opt.h",
    "-DCONFIG_CHIP_ARCH_VER=3",
    "-DCONFIG_ARCH_APP_CORE",
    "-DCONFIG_CPU_CM33F",
]

board_cxx_flags = []
board_ld_flags = []

# Board adapter dir for OHOS components.
board_adapter_dir = "//device/soc/allwinner/xradio/adapter"

board_include_dirs = [
    "//utils/native/lite/include",
]

# Sysroot path.
board_configed_sysroot = ""

# Board storage type, it used for file system generation.
storage_type = ""
