# Copyright (C) VYAGOO TECHNOLOGY Co., Ltd. 2022. All rights reserved.

import("//build/ohos.gni")
import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")
import("//drivers/peripheral/camera/hal/camera.gni")

ohos_prebuilt_etc("driver_adapter") {
  if (use_musl) {
    source = "//device/board/seed/T507/camera/src/driver_adapter/libs/libdriver_adapter.z.so"
  } else {
    source = "//device/board/seed/T507/camera/src/driver_adapter/libs/libdriver_adapter.z.so"
  }
  module_install_dir = "lib/"
  part_name = "hdf"
  subsystem_name = "hdf"
}
